--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,11 @@
-13/11/2020
 * NOTE: Load extension. Load web page. Open devtools. Refresh page.
+
+17/11/2020
+* DONE: Clean up repository
+* NEXT: Add docs for detailing how it works
+* NEXT: PoC for catalog with Focus Manager
+
+13/11/2020
 * NEXT: Fix reloading of app
 * NEXT: Clean up repository
 * NEXT: Add docs for detailing out how this is working
